1.10.0 - ????-??-??
  - General changes/additions
    * New command 'count' in augtool
    * New function 'not(bool) -> bool' for path expressions
    * The path expression 'label[. = "value"]' can now be written more
      concisely as 'label["value"]'
  - API changes
    * libfa has now a function fa_json to export an FA as a JSON file, and
      fa_state_* functions that make it possible to iterate over the FA's
      states and transitions. (Pedro Valero Mejia)
    * Add functions aug_ns_label, aug_ns_value, aug_ns_count, and
      aug_ns_path to get the label (with index), the value, the number of
      nodes, and the fully qualified path for nodes stored in a nodeset in
      a variable efficiently
  - Lens changes/additions
    * Nsswitch: allow comments at the end of a line (Philip Hahn) (Issue #517)
    * Ntp: accept 'ntpsigndsocket' statement (Philip Hahn) (Issue #516)
    * Properties: accept empty comments with DOS line endings (Issue #161)
    * Resolv: accept empty comments with DOS line endings (Issue #161)

1.9.0 - 2017-10-06
  - General changes/additions
    * several improvements to the error messages when transforming a tree
      back to text fails. They now make it clearer what part of the tree
      was problematic, and what the tree should have looked like.
    * Fixed the pkg-config file, which should now be usable
    * Fix handling of backslash-escaping in strings and regular expressions
      in the lens language. We used to handle constructs like "\\" and
      /\\\\/ incorrectly. (Issue #495)
    * do not unescape the default value of a del on create; otherwise we are
      double unescaping these strings (Issue #507)
    * remove tempfile when saving files because destination is not writable
      (Issue #479)
    * span information is now updated on save (Issue #467)
    * fix lots of warnings generated by gcc 7.1
    * Various changes to reduce bashisms in tests and make them run on
      FreeBSD (Romain Tartière)